Mobile layout changes & optimization * Added mobile layout for Your Profile subpage * Changed animation for name_input appearing in the mobile layout * Changed article opening animation on mobile * Text is no longer selectable (except for article viewer) * Removed useless icons * Added lang to html * Removed useless CSS * Added backup fonts * Changed animations to my preferred syntax after something changed it * Compressed some animations in main.css into one line
--Dashboard--
* Fixed bug that would cut the main content bg off on tablets
* Changed checkmark color to new color scheme
* Removed stray end tag of h1 in index.html
* Removed trailing slashes in head, they can cause issues
* Removed extra <a> tag from mobiletab1 (coach)
* Added alt texts to all images
* Removed stray </img> tags
* Changed duplicate "weighticon" id to "bmiicon"

--Coach--
* Fixed bug that would open the sleep article no matter where you clicked
* Added alt texts to all images
* Removed trailing slashes in head
* Removed extra <a> from mobile tabs
* Closed <article> that starts on line 106

--Your Profile--
* Added alt texts to all images
* Removed trailing slashes from head
* Removed extra <a> from mobiletab1
* Removed stray </input> tags

--- a/articles/article_viewer.css
+++ b/articles/article_viewer.css
@@ -42,7 +42,7 @@ body {
     margin-top: 1rem;
     z-index: 2;
     position: fixed;
-    font-family: "Exo 2";
+    font-family: "Exo 2", Sans-serif;
     margin-left: 2rem;
 }
 
@@ -65,11 +65,11 @@ body {
 }
 
 #reader_article_title {
-    font-family: "Exo 2";
+    font-family: "Exo 2", Sans-serif;
 }
 
 #reader_article_content {
-    font-family: "DM Sans";
+    font-family: "DM Sans", Sans-serif;
 }
 
 @keyframes arrow_cycle {
